--- a/SolickManagerV3_4/Pages/ListPlansPage.xaml
+++ b/SolickManagerV3_4/Pages/ListPlansPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="SolickManagerV3_4.Pages.OperationsListPage"
+﻿<Page x:Class="SolickManagerV3_4.Pages.ListPlansPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:SolickManagerV3_4.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="680" d:DesignWidth="1280"
-      Title="OperationsListPage">
+      Title="ListPlansPage">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
@@ -27,8 +27,8 @@
                               VerticalAlignment="Top"
                               HeadersVisibility="Column"
                               IsReadOnly="true"
-                              ItemsSource="{Binding Operations}"
-                              SelectedItem="{Binding SelectedOperation}"
+                              ItemsSource="{Binding Plans}"
+                              SelectedItem="{Binding SelectedPlan}"
                               HorizontalAlignment="Left"
                               MinWidth="940"
                               Width="auto"
@@ -83,26 +83,21 @@
                         </DataGrid.RowStyle>
                         <DataGrid.Columns>
                             <DataGridTextColumn Width="60*" ElementStyle="{DynamicResource StyleDataGridTextColumn}" Header="Код" Binding="{Binding Id}"/>
-                            <DataGridTextColumn Width="100*" ElementStyle="{DynamicResource StyleDataGridTextColumn}" Header="Дата открытия" Binding="{Binding DataOpenView}"/>
-                            <DataGridTextColumn Width="100*" ElementStyle="{DynamicResource StyleDataGridTextColumn}" Header="Дата закрытия" Binding="{Binding DataCloseView}"/>
-                            <DataGridTextColumn Width="120*" ElementStyle="{DynamicResource StyleDataGridTextColumn}" Header="Статус" Binding="{Binding Status}"/>
-                            <DataGridTextColumn Width="120*" ElementStyle="{DynamicResource StyleDataGridTextColumn}" Header="Дебет" Binding="{Binding DebetNavigation.Title}"/>
-                            <DataGridTextColumn Width="120*" ElementStyle="{DynamicResource StyleDataGridTextColumn}" Header="Кредит" Binding="{Binding CreditNavigation.Title}"/>
-                            <DataGridTextColumn Width="120*" ElementStyle="{DynamicResource StyleDataGridTextColumn}" Header="Объект" Binding="{Binding Object}"/>
-                            <DataGridTextColumn Width="120*" ElementStyle="{DynamicResource StyleDataGridTextColumn}" Header="Сумма" Binding="{Binding Amount}"/>
+                            <DataGridTextColumn Width="100*" ElementStyle="{DynamicResource StyleDataGridTextColumn}" Header="Способ оплаты" Binding="{Binding IdhowpayNavigation.Title}"/>
+                            <DataGridTextColumn Width="100*" ElementStyle="{DynamicResource StyleDataGridTextColumn}" Header="Стоимость единицы" Binding="{Binding Costofone}"/>
                         </DataGrid.Columns>
                     </DataGrid>
                 </Border>
 
                 <Grid Height="34" VerticalAlignment="Top" Margin="20 5 10 0">
-                    <Label Content="Операции" 
+                    <Label Content="Ставки" 
                            FontFamily="Assets/Inter/#Inter-V.ttf"
                            FontSize="22"
                            Margin="10 0 0 0"
                            HorizontalAlignment="Left"/>
                     <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
                         <Button Style="{DynamicResource ButtonRoundStyle}" Margin="0 0 10 0"
-                                Click="AddNewOperation">
+                                Click="AddNewPlan">
                             <Border CornerRadius="5"
                                     BorderThickness="0"
                                     Background="#F0F0F0"
@@ -114,7 +109,7 @@
                                        HorizontalAlignment="Center"/>
                             </Border>
                         </Button>
-                        <Button Style="{DynamicResource ButtonRoundStyle}" Click="DeleteSelectedOperation">
+                        <Button Style="{DynamicResource ButtonRoundStyle}" Click="DeleteSelectedPlan">
                             <Border CornerRadius="5"
                                     BorderThickness="0"
                                     Background="#F0F0F0"
@@ -151,78 +146,17 @@
                         BorderBrush="White"
                         Padding="10">
                     <StackPanel Width="218">
-                        <StackPanel Orientation="Horizontal"
-                                    Width="218">
-                            <Label Content="с"
-                                   Margin="0 0 2 0"
-                                   FontSize="14"
-                                   FontFamily="Inter/#Inter-V.ttf"
-                                   Foreground="White"/>
-                            <TextBox FontSize="14"
-                                     FontFamily="Inter/#Inter-V.ttf"
-                                     Width="80"
-                                     Height="20"
-                                     Style="{DynamicResource RoundTextBox}"
-                                     Text="{Binding SearchDataStart, UpdateSourceTrigger=PropertyChanged}"/>
-                            <Label Content="по"
-                                   FontSize="14"
-                                   FontFamily="Inter/#Inter-V.ttf"
-                                   Foreground="White" Margin="10 0 2 0"/>
-                            <TextBox FontSize="14"
-                                     FontFamily="Inter/#Inter-V.ttf"
-                                     Width="80"
-                                     Height="20"
-                                     Style="{DynamicResource RoundTextBox}"
-                                     Text="{Binding SearchDataEnd, UpdateSourceTrigger=PropertyChanged}"/>
-                        </StackPanel>
-                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
-                        Margin="0 5 0 0" Width="218">
-                            <TextBlock Text="Статус"
-                           Foreground="White"
-                           FontFamily="Inter"
-                           FontSize="16"
-                           Height="20"/>
-                            <ComboBox Width="156" 
-                          Margin="15 0" 
-                          ItemsSource="{Binding Statuses}"
-                          SelectedItem="{Binding SearchStatus}"/>
-                        </StackPanel>
-                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
-                        Margin="0 5 0 0" Width="218">
-                            <TextBlock Text="Дебет"
-                           Foreground="White"
-                           FontFamily="Inter"
-                           FontSize="16"
-                           Height="20"/>
-                            <ComboBox Width="156" 
-                          Margin="18 0" 
-                          ItemsSource="{Binding Bankaccounts}"
-                          SelectedItem="{Binding SearchDebet}"/>
-                        </StackPanel>
-                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center"
-                        Margin="0 5 0 0" Width="218">
-                            <TextBlock Text="Кредит"
-                           Foreground="White"
-                           FontFamily="Inter"
-                           FontSize="16"
-                           Height="20"/>
-                            <ComboBox Width="156" 
-                          Margin="10 0" 
-                          ItemsSource="{Binding Bankaccounts}"
-                          DisplayMemberPath="Title"
-                          SelectedItem="{Binding SearchCredit}"/>
-                        </StackPanel>
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Width="218" Margin="0 8 0 0">
-                            <TextBlock Text="Объект"
+                            <TextBlock Text="Поиск"
                                FontFamily="Inter"
                                FontSize="16"
                                Height="20"
                                Foreground="White"/>
-                            <TextBox Text="{Binding SearchObject, UpdateSourceTrigger=PropertyChanged}"
+                            <TextBox Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}"
                              Style="{DynamicResource RoundTextBox}"
                              Height="20"
                              Width="156"
-                             Margin="8 0 0 0"/>
+                             Margin="16 0 0 0"/>
                         </StackPanel>
                     </StackPanel>
                 </Border>
@@ -233,37 +167,25 @@
                         Padding="10"
                         Height="auto">
                     <StackPanel >
-                        <Label Content="Операция"
+                        <Label Content="Ставка"
                                FontSize="16"
                                FontFamily="Inter/#Inter-V.ttf"
                                Foreground="White"
                                HorizontalContentAlignment="Center"/>
-                        <StackPanel Orientation="Horizontal" Margin="3 0 0 0">
-                            <TextBlock Text="Дата закрытия"
-                                       Foreground="White"
-                                       FontFamily="Inter"
-                                       FontSize="16"
-                                       Height="20"/>
-                            <TextBox x:Name="DataTextBox"
-                                     Style="{DynamicResource RoundTextBox}" 
-                                     Width="95"
-                                     Margin="10 0"
-                                     Text="{Binding DataOperation, UpdateSourceTrigger=PropertyChanged}"/>
-                        </StackPanel>
                         <StackPanel Orientation="Horizontal" 
                                     Width="218"
                                     Margin="0 3 0 0 ">
-                            <Label Content="Статус:"
+                            <Label Content="Оплата:"
                                    FontSize="14"
                                    FontFamily="Inter/#Inter-V.ttf"
                                    Foreground="White"
                                    Margin="0 0 20 0"/>
                             <ComboBox x:Name="StatusesComboBox"
-                                      ItemsSource="{Binding EditStatuses}"
-                                      SelectedItem="{Binding EditStatus}"
+                                      ItemsSource="{Binding HowPays}"
+                                      SelectedItem="{Binding EditHowPay}"
                                       Background="White"
                                       BorderThickness="0"
-                                      Width="143"
+                                      Width="139"
                                       Height="20"
                                       HorizontalAlignment="Right"/>
                         </StackPanel>
@@ -277,30 +199,7 @@
                                      Style="{DynamicResource RoundTextBox}" 
                                      Width="156"
                                      Margin="10 0"
-                                     Text="{Binding EditAmount, UpdateSourceTrigger=PropertyChanged}"/>
-                        </StackPanel>
-                        <StackPanel 
-                                    Width="208"
-                                    MinHeight="110"
-                                    Height="auto"
-                            Margin="0 3 0 0 ">
-                            <Label  Content="Объект:"
-                                        FontSize="14"
-                                        Foreground="White"
-                                        FontFamily="Inter/#Inter-V.ttf"/>
-                            <TextBox x:Name="ObjectTextBox"
-                                         Text="{Binding SelectedOperation.Object}"
-                                         Style="{DynamicResource RoundTextBox}"
-                                         TextWrapping="Wrap"
-                                         FontSize="12"
-                                         Foreground="Black"
-                                         FontFamily="Inter/#Inter-V.ttf"
-                                         Width="208"
-                                         MinHeight="90"
-                                         MaxHeight="300"
-                                         Height="auto"
-                                         HorizontalAlignment="Center">
-                            </TextBox>
+                                     Text="{Binding SelectedPlan.Costofone, UpdateSourceTrigger=PropertyChanged}"/>
                         </StackPanel>
                         <Button x:Name="SaveButton"
                                 Style="{DynamicResource ButtonRoundStyle}" 
@@ -313,7 +212,7 @@
                                 Background="White"
                                 BorderThickness="0"
                                 Margin="0 14 0 0"
-                                Click="SaveEditSelectedOperation"/>
+                                Click="SaveEditSelectedPlan"/>
                     </StackPanel>
                 </Border>
             </StackPanel>
