--- a/SolickManagerV3_4/Windows/AddCrossCategoryCharacteristicWindow.xaml
+++ b/SolickManagerV3_4/Windows/AddCrossCategoryCharacteristicWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:SolickManagerV3_4.Windows"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
+        Icon="Images/SolulCompIcon.ico"
         Title="AddCrossCategoryCharacteristicWindow" Height="305" Width="400">
     <Border
         Width="350"
