--- a/SolickManagerV3_4/Windows/AddOrEditAssemblyWindow.xaml
+++ b/SolickManagerV3_4/Windows/AddOrEditAssemblyWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SolickManagerV3_4.Windows"
         mc:Ignorable="d"
+        Icon="Images/SolulCompIcon.ico"
         Title="AddOrEditAssemblyWindow" Height="700" Width="600">
     <Border Width="550"
             Height="620"
