--- a/SolickManagerV3_4/Windows/AddOrEditCharacteristicWindow.xaml
+++ b/SolickManagerV3_4/Windows/AddOrEditCharacteristicWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:SolickManagerV3_4.Windows"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
+        Icon="Images/SolulCompIcon.ico"
         Title="AddOrEditCharacteristicWindow" Height="260" Width="400">
     <Grid>
         <Border Width="350"
