--- a/SolickManagerV3_4/Windows/AddOrEditClient.xaml
+++ b/SolickManagerV3_4/Windows/AddOrEditClient.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:SolickManagerV3_4.Windows"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
+        Icon="Images/SolulCompIcon.ico"
         Title="Клиент" Height="700" Width="400">
     <Border Width="350"
             Height="620"
