--- a/SolickManagerV3_4/Windows/AddOrEditProviderWindow.xaml
+++ b/SolickManagerV3_4/Windows/AddOrEditProviderWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:SolickManagerV3_4.Windows.Images"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
+        Icon="Images/SolulCompIcon.ico"
         Title="AddOrEditProviderWindow" Height="650" Width="400">
     <Border Width="350"
             Height="570"
