--- a/SolickManagerV3_4/Windows/AddOrEditServiceWindow.xaml
+++ b/SolickManagerV3_4/Windows/AddOrEditServiceWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SolickManagerV3_4.Windows"
         mc:Ignorable="d"
+        Icon="Images/SolulCompIcon.ico"
         Title="Услуга" Height="410" Width="400">
     
     <Grid>
