--- a/SolickManagerV3_4/Windows/ListAssembliesWindow.xaml
+++ b/SolickManagerV3_4/Windows/ListAssembliesWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SolickManagerV3_4.Windows"
         mc:Ignorable="d"
+        Icon="Images/SolulCompIcon.ico"
         Title="ListAssembliesWindow" Height="640" Width="980">
     <Grid>
         <Border Background="White"
