Реализовал добавление сотрудников, ставок и спообов оплаты

--- a/SolickManagerV3_4/Pages/ListPlansPage.xaml
+++ b/SolickManagerV3_4/Pages/ListPlansPage.xaml
@@ -183,6 +183,7 @@
                             <ComboBox x:Name="StatusesComboBox"
                                       ItemsSource="{Binding HowPays}"
                                       SelectedItem="{Binding EditHowPay}"
+                                      DisplayMemberPath="Title"
                                       Background="White"
                                       BorderThickness="0"
                                       Width="139"
