--- a/SolickManagerV3_4/Windows/MainWindow.xaml
+++ b/SolickManagerV3_4/Windows/MainWindow.xaml
@@ -117,7 +117,17 @@
                        FontFamily="Inter/#Inter-V.ttf"/>
                     </StackPanel>
                 </Border>
-
+                <Border Height="36" Width="280" Padding="3" CornerRadius="5" Margin="10 10 10 10" Style="{DynamicResource RightMenuElement}" MouseLeftButtonDown="Sales">
+                    <StackPanel  Orientation="Horizontal">
+                        <Image Source="/Windows/Images/Selling.png" Height="30" Width="30" HorizontalAlignment="Left"/>
+                        <Label Content="Продажи"
+                       VerticalContentAlignment="Center"
+                       Width="auto"
+                       Foreground="White"
+                       FontSize="16"
+                       FontFamily="Inter/#Inter-V.ttf"/>
+                    </StackPanel>
+                </Border>
                 <Border Height="36" Width="280" Padding="3" CornerRadius="5" Margin="10 10 10 10" Style="{DynamicResource RightMenuElement}" MouseLeftButtonDown="ClientsAndDevices">
                     <StackPanel  Orientation="Horizontal">
                         <Image Source="/Windows/Images/Clients.png" Height="30" Width="30" HorizontalAlignment="Left"/>
