--- a/SolickManagerV3_4/Windows/MainWindow.xaml
+++ b/SolickManagerV3_4/Windows/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Closing="CloseWindow"
         WindowStartupLocation="CenterScreen"
+        WindowState="Maximized"
         Title="MainWindow" MinHeight="720" MinWidth="1280"
         Icon="Images/SolulCompIcon.ico"
         Background="#FAFAFA">
