--- a/SolickManagerV3_4/Windows/AddCrossSaleProductWindow.xaml
+++ b/SolickManagerV3_4/Windows/AddCrossSaleProductWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="SolickManagerV3_4.Windows.ListAssembliesWindow"
+﻿<Window x:Class="SolickManagerV3_4.Windows.AddCrossSaleProductWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,8 +6,7 @@
         xmlns:local="clr-namespace:SolickManagerV3_4.Windows"
         mc:Ignorable="d"
         Icon="Images/SolulCompIcon.ico"
-        WindowStartupLocation="CenterOwner"
-        Title="ListAssembliesWindow" Height="640" Width="980">
+        Title="AddCrossSaleProductWindow" Height="640" Width="980">
     <Grid>
         <Border Background="White"
                         CornerRadius="10"
@@ -92,7 +91,7 @@
                 </DataGrid.Columns>
                 <DataGrid.ContextMenu>
                     <ContextMenu>
-                        <MenuItem Header="Выбрать" Click="AddProductInGroup"/>
+                        <MenuItem Header="Выбрать" Click="AddProductInCross"/>
                     </ContextMenu>
                 </DataGrid.ContextMenu>
             </DataGrid>
@@ -104,24 +103,6 @@
                            FontSize="22"
                            Margin="10 0 0 0"
                            HorizontalAlignment="Left"/>
-            <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
-                <TextBlock Text="Поиск"
-                                       FontSize="16"
-                                       VerticalAlignment="Bottom"
-                                       Margin="0 0 10 0"
-                                       FontFamily="Inter"
-                                       FontWeight="Medium"/>
-                <TextBox Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}"
-                                     Style="{DynamicResource RoundTextBox}"
-                                     Height="24"
-                                     VerticalAlignment="Bottom"
-                                     FontSize="14"
-                                     FontFamily="Inter"
-                                     FontWeight="Light"
-                                     Width="140"
-                                     BorderThickness="1"/>
-            </StackPanel>
         </Grid>
     </Grid>
-
 </Window>
