--- a/SolickManagerV3_4/Windows/AddCrossCategoryCharacteristicWindow.xaml
+++ b/SolickManagerV3_4/Windows/AddCrossCategoryCharacteristicWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
         Icon="Images/SolulCompIcon.ico"
-        Title="AddCrossCategoryCharacteristicWindow" Height="305" Width="400">
+        Title="SoulComp Manager" Height="305" Width="400">
     <Border
         Width="350"
         Height="250"
