--- a/SolickManagerV3_4/Windows/AddOrEditProductWindow.xaml
+++ b/SolickManagerV3_4/Windows/AddOrEditProductWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
         Icon="Images/SolulCompIcon.ico"
-        Title="AddOrEditProductWindow" Height="700" Width="800">
+        Title="SoulComp Manager" Height="700" Width="800">
     <Border Width="750"
             Height="620"
             CornerRadius="10"
