--- a/SolickManagerV3_4/Windows/EditOrAddApplication.xaml
+++ b/SolickManagerV3_4/Windows/EditOrAddApplication.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
         Icon="Images/SolulCompIcon.ico"
-        Title="EditOrAddApplication" Height="700" Width="400"
+        Title="SoulComp Manager" Height="700" Width="400"
     xmlns:theme="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2">
     <Window.Resources>
         <Style x:Key="FocusVisual">
