--- a/SolickManagerV3_4/Windows/MainWindow.xaml
+++ b/SolickManagerV3_4/Windows/MainWindow.xaml
@@ -8,7 +8,7 @@
         Closing="CloseWindow"
         WindowStartupLocation="CenterScreen"
         WindowState="Maximized"
-        Title="MainWindow" MinHeight="720" MinWidth="1280"
+        Title="SoulComp Manager" MinHeight="720" MinWidth="1280"
         Icon="Images/SolulCompIcon.ico"
         Background="#FAFAFA">
     <Grid>
