--- a/SolickManagerV3_4/Windows/AddClient'sDeviceWindow.xaml
+++ b/SolickManagerV3_4/Windows/AddClient'sDeviceWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
         Icon="Images/SolulCompIcon.ico"
-        Title="AddClient_sDeviceWindow" Height="410" Width="400">
+        Title="SoulComp Manager" Height="410" Width="400">
     <Grid>
         <Border Width="350"
             Height="330"
