--- a/SolickManagerV3_4/Windows/AddCrossSaleAssemblyWindow.xaml
+++ b/SolickManagerV3_4/Windows/AddCrossSaleAssemblyWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Icon="Images/SolulCompIcon.ico"
         WindowStartupLocation="CenterScreen"
-        Title="AddCrossSaleAssemblyWindow" Height="640" Width="980">
+        Title="SoulComp Manager" Height="640" Width="980">
     <Grid>
         <Grid>
             <Border Background="White"
