--- a/SolickManagerV3_4/Windows/AddCrossSaleProductWindow.xaml
+++ b/SolickManagerV3_4/Windows/AddCrossSaleProductWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:SolickManagerV3_4.Windows"
         mc:Ignorable="d"
         Icon="Images/SolulCompIcon.ico"
-        Title="AddCrossSaleProductWindow" Height="640" Width="980">
+        Title="SoulComp Manager" Height="640" Width="980">
     <Grid>
         <Border Background="White"
                         CornerRadius="10"
