--- a/SolickManagerV3_4/Windows/AddOrEditBankAccountWindow.xaml
+++ b/SolickManagerV3_4/Windows/AddOrEditBankAccountWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
         Icon="Images/SolulCompIcon.ico"
-        Title="AddOrEditBankAccountWindow" Height="270" Width="400">
+        Title="SoulComp Manager" Height="270" Width="400">
     <Grid>
         <Border Width="350"
             Height="200"
