--- a/SolickManagerV3_4/Windows/AddOrEditCategoryWindow.xaml
+++ b/SolickManagerV3_4/Windows/AddOrEditCategoryWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
         Icon="Images/SolulCompIcon.ico"
-        Title="AddOrEditCategoryWindow" Height="700" Width="400">
+        Title="SoulComp Manager" Height="700" Width="400">
     <Border Width="350"
             Height="620"
             CornerRadius="10"
