--- a/SolickManagerV3_4/Windows/AddOrEditCharacteristicWindow.xaml
+++ b/SolickManagerV3_4/Windows/AddOrEditCharacteristicWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
         Icon="Images/SolulCompIcon.ico"
-        Title="AddOrEditCharacteristicWindow" Height="260" Width="400">
+        Title="SoulComp Manager" Height="260" Width="400">
     <Grid>
         <Border Width="350"
             Height="180"
