--- a/SolickManagerV3_4/Windows/AddOrEditOperationWindow.xaml
+++ b/SolickManagerV3_4/Windows/AddOrEditOperationWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
         Icon="Images/SolulCompIcon.ico"
-        Title="AddOrEditOperationWindow" Height="440" Width="400">
+        Title="SoulComp Manager" Height="440" Width="400">
     <Border Width="350"
             Height="380"
             CornerRadius="10"
