--- a/SolickManagerV3_4/Windows/AddOrEditProviderWindow.xaml
+++ b/SolickManagerV3_4/Windows/AddOrEditProviderWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
         Icon="Images/SolulCompIcon.ico"
-        Title="AddOrEditProviderWindow" Height="650" Width="400">
+        Title="SoulComp Manager" Height="650" Width="400">
     <Border Width="350"
             Height="570"
             CornerRadius="10"
