--- a/SolickManagerV3_4/Windows/AddOrEditServiceWindow.xaml
+++ b/SolickManagerV3_4/Windows/AddOrEditServiceWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:SolickManagerV3_4.Windows"
         mc:Ignorable="d"
         Icon="Images/SolulCompIcon.ico"
-        Title="Услуга" Height="410" Width="400">
+        Title="SoulComp Manager" Height="410" Width="400">
     
     <Grid>
         <Border Width="350"
