--- a/SolickManagerV3_4/Windows/ListAssembliesWindow.xaml
+++ b/SolickManagerV3_4/Windows/ListAssembliesWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Icon="Images/SolulCompIcon.ico"
         WindowStartupLocation="CenterOwner"
-        Title="ListAssembliesWindow" Height="640" Width="980">
+        Title="SoulComp Manager" Height="640" Width="980">
     <Grid>
         <Border Background="White"
                         CornerRadius="10"
